<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bar_layout" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/bindusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_enter_username"
            android:paddingLeft="20dp"
            android:textColor="@color/registtextcolor" />

        <EditText
            android:id="@+id/bindpassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/str_enter_pass1"
            android:paddingLeft="20dp"
            android:password="true"
            android:textColor="@color/registtextcolor" />

        <EditText
            android:id="@+id/bindemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/str_enter_email"
            android:paddingLeft="20dp"
            android:textColor="@color/registtextcolor"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_str_bind"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/login_str_close"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>