<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"	    
	    >  
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
	        <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:orientation="horizontal"            
	            android:id="@+id/tv_account_title"
	            android:text="@string/reset_passwd_account"
	            android:textColor="@color/gray"
	            android:gravity="center_vertical"
	            />
	         <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:orientation="horizontal"            
	            android:id="@+id/tv_newpwd_title"
	            android:text="@string/reset_passwd_new_passwd"
	            android:textColor="@color/gray"
	            android:gravity="center_vertical"
	            android:layout_marginTop="20dp"
	            />    
	            
	         <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:orientation="horizontal"            
	            android:id="@+id/tv_confirm_title"
	            android:text="@string/reset_passwd_confirm_passwd"
	            android:textColor="@color/gray"
	            android:gravity="center_vertical"
	            android:layout_marginTop="20dp"
	            />	         	        
	    </LinearLayout>
    
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="20dp"
	        >
	
	        <TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:orientation="horizontal"            
	            android:id="@+id/tv_account"
	            android:text="@string/reset_passwd_account"
	            android:textColor="@color/gray"
	            android:gravity="center_vertical"
	            android:paddingLeft="6dp"
	            />           
	        <EditText 
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:orientation="horizontal"            
	            android:id="@+id/edt_new_pwd"
	            android:hint="@string/reset_passwd_new_passwd_hint"
	            android:textColor="@color/black"
	            android:layout_marginTop="20dp"
	            android:background="@drawable/third_input"
	            android:paddingLeft="6dp"
	            android:inputType="textPassword"
	             android:singleLine="true"
	            /> 
	            
	        <EditText 
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:orientation="horizontal"            
	            android:id="@+id/edt_confirm_pwd"
	            android:hint="@string/reset_passwd_confirm_passwd_hint"
	            android:textColor="@color/black"
	            android:layout_marginTop="20dp"
	            android:paddingLeft="6dp"
	            android:background="@drawable/third_input"
	            android:inputType="textPassword"
	            android:singleLine="true"
	            />   	        
	    </LinearLayout>  
	</LinearLayout> 	    
    <Button 
        android:id="@+id/btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/blue_bg"
        android:text="@string/reset_passwd_done"
        android:textColor="@color/white" />

</LinearLayout>
