<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quickinstalllayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0F0F3"
    android:orientation="vertical" >

    <!-- android:background="@color/white" -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/wifi_device"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/quickinstall_img_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip" />

            <Button
                android:id="@+id/quickinstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@drawable/quick_install_bg"
                android:text="@string/str_quick_install"
                android:textColor="@color/quickinstall_btn_normal"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/line_device"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/unwire_device_img_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip" />

            <Button
                android:id="@+id/adddevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@drawable/quick_install_bg"
                android:text="@string/str_help1_1"
                android:textColor="@color/quickinstall_btn_normal"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/str_quick_install_tips2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F0F3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/no_device_lead_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/mydevice_error" />

        <TextView
            android:id="@+id/no_device_lead_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/str_no_device_lead" />

        <ImageView
            android:id="@+id/no_device_lead_arrow"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/help_rightup_icon" />
    </LinearLayout>

</LinearLayout>